# sample

./: .gitignore  CONNECTION_FLOW_ANALYSIS.md  ENHANCED_FEATURES.md  Procfile  RENDER_DEPLOYMENT.md  SOCKET_USAGE_GUIDE.md  SUPABASE_SETUP.md  TECH_STACK.md  render.yaml  requirements.txt  run_device_client.bat  run_device_client.ps1  server.py  test_supabase.html
.aux/: CLEANUP.md
py_simple/: .gitignore  Encryption  agent_sync.py  analytics_module.py  behavior_simulator.py  core_handler.py  device_client.py  main  monitor  note  ransom_window.py  registry  requirements.txt  safe_ransomware_simulator.py  server.py  socket_core.py  supabase_store.py  test_ransom_window.py  test_supabase.py
py_simplee/: __init__.py  bootstrap_env.py  requirements.txt  server.py
rusty/: Cargo.toml  README.md
rusty/src/: crypto.rs  main.rs  processor.rs  ransom.rs  socket_client.rs
site/: package-lock.json
site/backend/: package.json  server.js
site/frontend/: .env  package-lock.json  package.json
site/frontend/src/: App.css  App.jsx  C2Browser.jsx  C2Dashboard.jsx  EliteUI.jsx  FreshUI.jsx  Home.jsx  HomeGrid.jsx  Lab.jsx  Layout.jsx  PySimplePage.jsx  elite.css  index.css  modern.css  socketClient.js
site/frontend/src/lib/: supabase.js
site/src/: App.css  App.jsx
socket/: README.md  go.mod  main.go  socket_client.py
