[package]
name = "rusty"
version = "0.1.0"
edition = "2021"

[dependencies]
aes-gcm = { version = "0.10", features = ["aes"] }
aead = "0.5"
rand = "0.8"
walkdir = "2.4"
base64 = "0.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hostname = "0.3"
clap = { version = "4.5", features = ["derive"] }
time = "0.3"
rsa = { version = "0.9", default-features = false, features = ["pkcs8", "sha2"] }
sha2 = "0.10"
pem = "3.0"
reqwest = { version = "0.11", features = ["json", "rustls-tls", "blocking"], default-features = false }
rust_socketio = "0.4"
thiserror = "1.0"
anyhow = "1.0"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
